<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
  >
    
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:text="@string/yourBody"
			android:id="@+id/yourBody"
			android:layout_height="150dip"
			android:layout_width="0dip"
			android:layout_weight="1" 
			/>
		<Button
			android:text="@string/yourPrograms"
			android:id="@+id/yourPrograms"
			android:layout_height="150dip"
			android:layout_width="0dip"
			android:layout_weight="1" 
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:text="@string/yourSchedule"
			android:id="@+id/yourSchedule"
			android:layout_height="150dip"
			android:layout_width="0dip"
			android:layout_weight="1" 
			/>
		<Button
			android:text="@string/yourWorkouts"
			android:id="@+id/yourWorkouts"
			android:layout_height="150dip"
			android:layout_width="0dip"
			android:layout_weight="1" 
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:text="@string/settings"
			android:id="@+id/yourSettings"
			android:layout_height="150dip"
			android:layout_width="0dip"
			android:layout_weight="1" 
			/>
		<Button
			android:text="@string/yourExercises"
			android:id="@+id/yourExercises"
			android:layout_height="150dip"
			android:layout_width="0dip"
			android:layout_weight="1" 
			/>
	</LinearLayout>
</LinearLayout>
