<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFFFFF"
	>	
	
		
	<TextView
		android:text="@string/chooseProgramSchedule"
		android:id="@+id/chooseProgramSchedule"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:textSize="10pt"
		android:gravity="center"
		android:layout_width="fill_parent"
		/>
	<Spinner
		android:id="@+id/setupScheduleChooseProgram"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:prompt="@string/selectProgram"
		/>
		
	<TextView
		android:text="@string/trainingDays"
		android:id="@+id/SetupTrainingScheduleChooseDaysLabel"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:textSize="10pt"
		android:gravity="center"
		android:layout_width="fill_parent"
		/>
	
	<TableLayout
		android:id="@+id/SetupTrainingScheduleChooseDaysTable"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		>		
		<TableRow
			android:id="@+id/SetupTraingingScheduleRowLabels"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
			
			<TextView
				android:text="@string/SetupTrainingScheduleMoLabelString"
				android:id="@+id/SetupTrainingScheduleMoLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:text="@string/SetupTrainingScheduleTuLabelString"
				android:id="@+id/SetupTrainingScheduleTuLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>	
			<TextView
				android:text="@string/SetupTrainingScheduleWeLabelString"
				android:id="@+id/SetupTrainingScheduleWeLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:text="@string/SetupTrainingScheduleThLabelString"
				android:id="@+id/SetupTrainingScheduleThLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:text="@string/SetupTrainingScheduleFrLabelString"
				android:id="@+id/SetupTrainingScheduleFrLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:text="@string/SetupTrainingScheduleSaLabelString"
				android:id="@+id/SetupTrainingScheduleSaLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>
			<TextView
				android:text="@string/SetupTrainingScheduleSuLabelString"
				android:id="@+id/SetupTrainingScheduleSuLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				/>		
		</TableRow>	
		
		
		<TableRow
			android:id="@+id/SetupTraingingScheduleRowCheckboxes"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleMoValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleTuValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleWeValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleThValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleFrValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleSaValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
		
			<CheckBox
				android:id="@+id/SetupTrainingScheduleSuValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			
		</TableRow>	
	</TableLayout>
	
	<RadioGroup
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:orientation="vertical"
	      >	
			<RadioButton
				android:id="@+id/SetupTrainingScheduleAlternate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/SetupTrainingScheduleAlternateString"
				android:textColor="#000000"
				/>
				
			<RadioButton
				android:id="@+id/SetupTrainingScheduleFixed"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/SetupTrainingScheduleFixedString"
				android:textColor="#000000"
				/>					
	</RadioGroup>	
	
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:gravity="bottom" android:layout_height="fill_parent">		
		<Button
			android:layout_column="1"
			android:id="@+id/SetupTrainingScheduleBack"
			android:text="@string/back"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			>
		</Button>
		<Button
			android:id="@+id/SetupScheduleSave"
			android:text="@string/save"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			>
		</Button>		
		
	</LinearLayout>

</LinearLayout>
