<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFFFFF"
	>  
  

	<TextView
			android:text="@string/BenchmarkLabelString"
			android:id="@+id/BenchmarkLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#000000"
			android:textSize="10pt"
			android:layout_gravity="center"
			/>
	
	<TextView
			android:text="@string/BenchmarkYourBodyLabelString"
			android:id="@+id/BenchmarkYourBodyLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#000000"
			android:textSize="8pt"
			/>
			
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>		
  
		<TextView
           	android:layout_column="1"
			android:text="@string/WeightLabelString"
			android:id="@+id/WeightLabel"
           	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	/>
		<EditText
			android:text="80"
			android:id="@+id/WeightValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minEms="3"
			/>
  
		<TextView
           	android:layout_column="1"
			android:text="@string/BodyFatLabelString"
			android:id="@+id/BodyFatLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<EditText
			android:id="@+id/BodyFatValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="20"
			/>	
				
	</LinearLayout>
		
	<TextView
			android:text="@string/BenchmarkYourIronLabelString"
			android:id="@+id/BenchmarkYourIronLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#000000"
			android:textSize="8pt"
			/>
	<TableLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>		
		<TableRow>
			<Button
            	android:layout_column="1"
				android:text="@string/empty"
				android:id="@+id/BenchmarkExercise1"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	/>
			<EditText
				android:text="0"
				android:id="@+id/BenchmarkValue1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
		</TableRow>
		<TableRow>
			<Button
            	android:layout_column="1"
				android:text="@string/empty"
				android:id="@+id/BenchmarkExercise2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:id="@+id/BenchmarkValue2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="0" android:minEms="3"
				/>		
		</TableRow>
		<TableRow>
			<Button
            	android:layout_column="1"
				android:text="@string/empty"
				android:id="@+id/BenchmarkExercise3"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	/>
			<EditText
				android:text="0"
				android:id="@+id/BenchmarkValue3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
		</TableRow>
		<TableRow>
			<Button
            	android:layout_column="1"
				android:text="@string/empty"
				android:id="@+id/BenchmarkExercise4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:id="@+id/BenchmarkValue4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="0" android:minEms="3"
				/>			
		</TableRow>	
	</TableLayout>
  
	<TextView
			android:text="@string/BenchmarkYourDateLabelString"
			android:id="@+id/BenchmarkYourDateLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#000000"
			android:textSize="8pt"
			/>
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>	
		<TextView
				android:text="21.12.2010"
				android:id="@+id/BenchmarkDateValue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#000000"
				android:textSize="6pt"
				/>
		<Button
			android:layout_column="1"
			android:id="@+id/BenchmarkDatePicker"
			android:text="@string/DifferentDate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>	
	</LinearLayout>
	
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:gravity="bottom"
		>		
		<Button
			android:layout_column="1"
			android:id="@+id/BenchmarkBack"
			android:text="@string/back"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			/>
		<Button
			android:id="@+id/BenchmarkDone"
			android:text="@string/done"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			/>		
	</LinearLayout>
</LinearLayout>
