<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background="#FFFFFF"
	>

	<EditText
		android:text="Workout A"
		android:id="@+id/WorkoutName"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
		
	<TableLayout
		android:id="@+id/SetupTrainingScheduleChooseDaysTable"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		>		
		<TableRow
			android:id="@+id/SetupWorkoutRowHead"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>			
			<TextView
	           	android:layout_column="1"
				android:text="@string/ExerciseLabelString"
				android:id="@+id/ExerciseLabel"
	           	android:layout_width="wrap_content"
	           	android:layout_height="wrap_content"
	           	/>
			<TextView
				android:text="@string/WeightLabelString"
				android:id="@+id/SetupWorkoutWeightLabel"
	           	android:layout_width="wrap_content"
	           	android:layout_height="wrap_content"
	           	/>	           	
			<TextView
				android:text="@string/RepetitionsLabelString"
				android:id="@+id/SetupWorkoutRepetitionsLabel"
	           	android:layout_width="wrap_content"
	           	android:layout_height="wrap_content"
	           	/>        	
			<TextView
				android:text="@string/SetsLabelString"
				android:id="@+id/SetupWorkoutSetsLabel"
	           	android:layout_width="wrap_content"
	           	android:layout_height="wrap_content"
	           	/>
		</TableRow>	
		<TableRow
			android:id="@+id/SetupWorkoutRow1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
			<Button
	           	android:layout_column="1"
				android:text="@string/SquatLabelString"
				android:id="@+id/SetupWorkoutSquat"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:text="20"
				android:id="@+id/SetupWorkoutExercise1Weight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise1Reps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise1Sets"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="1"
				/>
		</TableRow>	
		<TableRow
			android:id="@+id/SetupWorkoutRow2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
			<Button
	           	android:layout_column="1"
				android:text="@string/BenchpressLabelString"
				android:id="@+id/SetupWorkoutBenchpress"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:text="20"
				android:id="@+id/SetupWorkoutExercise2Weight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise2Reps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise2Sets"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="1"
				/>
		</TableRow>	
		<TableRow
			android:id="@+id/SetupWorkoutRow3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
			<Button
	           	android:layout_column="1"
				android:text="@string/InvertedRowsLabelString"
				android:id="@+id/SetupWorkoutInvertedRows"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:text="0"
				android:id="@+id/SetupWorkoutExercise3Weight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise3Reps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise3Sets"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="1"
				/>
		</TableRow>	
		<TableRow
			android:id="@+id/SetupWorkoutRow4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
			<Button
	           	android:layout_column="1"
				android:text="@string/PushupsLabelString"
				android:id="@+id/SetupWorkoutPushups"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:text="0"
				android:id="@+id/SetupWorkoutExercise4Weight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise4Reps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise4Sets"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="1"
				/>
		</TableRow>	
		<TableRow
			android:id="@+id/SetupWorkoutRow5"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>
			<Button
	           	android:layout_column="1"
				android:text="@string/ReverseCrunchesLabelString"
				android:id="@+id/SetupWorkoutReverseCrunch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<EditText
				android:text="30"
				android:id="@+id/SetupWorkoutExercise5Weight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise5Reps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="3"
				/>
			<EditText
				android:text="5"
				android:id="@+id/SetupWorkoutExercise5Sets"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minEms="1"
				/>
		</TableRow>	
	</TableLayout>
	<Button
		android:text="@string/AddNewString"
		android:id="@+id/SetupWorkoutAdd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>
	
	<LinearLayout 
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="bottom">		
		<Button
			android:id="@+id/SetupWorkoutBack"
			android:text="@string/back"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			>
		</Button>
		<Button
			android:id="@+id/SetupWorkoutDone"
			android:text="@string/done"
			android:layout_width="0dip"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			>
		</Button>		
		
	</LinearLayout>

</LinearLayout>
