<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >
	<ImageView
		android:id="@+id/ImageView01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/logo"
	/>
	<TextView
		android:text="@string/Ali"
		android:id="@+id/QotD"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="#000000"
		android:typeface="serif"
		android:textStyle="italic"
		android:gravity="center_vertical|center_horizontal"
		android:shadowDx="1"
		android:shadowDy="1"
		android:shadowRadius="1"
		android:shadowColor="#666666"
		android:layout_marginTop="0px"
		android:layout_marginBottom="0px"
		android:textSize="8pt">
	</TextView>
	<ImageView
		android:id="@+id/ImageView02"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/logo"
		/>	
	<LinearLayout
		android:orientation="vertical"
		android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent"
		android:layout_height="match_parent"
		android:gravity="bottom"
		>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/TrainButton"
			android:text="@string/TrainButtonString"
			android:clickable="true"
			android:textStyle="bold"
			android:textSize="16pt" android:layout_weight="0">
		</Button>
		<LinearLayout
			android:orientation="horizontal"
			android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<Button
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				android:id="@+id/AnalyzeButton"
				android:text="@string/AnalyzeButtonString"
				android:clickable="false">
			</Button>
			<Button
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				android:id="@+id/BenchmarkButton"
				android:text="@string/BenchmarkButtonString"
				android:clickable="false">
			</Button>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<Button
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				android:id="@+id/SetupButton"
				android:text="@string/SetupButtonString"
				android:clickable="true">
			</Button>
			<!-- <Button
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1" 
				android:id="@+id/SettingsButton"
				android:text="@string/SettingsButtonString"
				android:clickable="false">
			</Button> -->
		</LinearLayout>
	
</LinearLayout>


</LinearLayout>
